--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Roboto, sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
@@ -37,33 +41,10 @@ body {
     font-style: normal;
 }
 
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-
-button:hover {
-    border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
-
-
 #app {
     display: flex;
-    width: 100%;
-    height: 100%;
-
+    width: 100vw;
+    height: 100vh;
 }
 
 
